--- a/ITZRealStateWeb/Web.config
+++ b/ITZRealStateWeb/Web.config
@@ -17,6 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ApiUrl" value="http://ITZRealState.api.localhost/api" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
