--- a/ITZRealStateWeb/Web.config
+++ b/ITZRealStateWeb/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ITZRealStateWeb-20130406024533;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ITZRealStateWeb-20130406024533.mdf" providerName="System.Data.SqlClient" />
+    <add name="ITZRealStateContext"  providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ITZREALSTATE;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
