--- a/ITZRealStateWeb/ITZRealStateWeb.csproj
+++ b/ITZRealStateWeb/ITZRealStateWeb.csproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Dashboard.css" />
+    <Content Include="Content\logs.css" />
     <Content Include="Content\Main\MainSite.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
