--- a/ITZRealStateWeb/ITZRealStateWeb.csproj
+++ b/ITZRealStateWeb/ITZRealStateWeb.csproj
@@ -312,11 +312,12 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
-    <Content Include="Views\Listing\Create.cshtml" />
     <Content Include="Views\Listing\Index.cshtml" />
     <Content Include="Views\SalesAgent\Index.cshtml" />
     <Content Include="Views\Desire\Index.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\Listing\Create.cshtml" />
+    <Content Include="Views\Listing\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
