--- a/ITZRealStateWeb/ITZRealStateWeb.csproj
+++ b/ITZRealStateWeb/ITZRealStateWeb.csproj
@@ -318,6 +318,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Listing\Create.cshtml" />
     <Content Include="Views\Listing\Edit.cshtml" />
+    <Content Include="Views\User\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
