--- a/ITZRealStateWeb/ITZRealStateWeb.csproj
+++ b/ITZRealStateWeb/ITZRealStateWeb.csproj
@@ -255,6 +255,7 @@
     <Content Include="Images\Home\logosistem.png" />
     <Content Include="Images\Home\main.png" />
     <Content Include="Scripts\Amenitie\Index.js" />
+    <Content Include="Scripts\Desire\Index.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -334,7 +335,7 @@
     <Content Include="Views\Room\Create.cshtml" />
     <Content Include="Views\Search\SearchLog.cshtml" />
     <Content Include="Views\Listing\MyListings.cshtml" />
-    <Content Include="Views\Search\MyNewSearch.cshtml" />
+    <Content Include="Views\Search\MyNewSearchL.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
